syntax = "proto3";
package nanoswap.enum;

enum Issuer {
    USA_SSN = 0;
}
